--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -58,6 +58,9 @@
       }
       .movie-info span {
           margin-right: 20px;
+          font-size: 18px;
+          font-weight: bold;
+          width: 100%;
       }
       .movie-info img {
           margin-right: 10px;
