--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -54,7 +54,11 @@
       }
       .movie-info {
           display: flex;
+          flex-direction: column;
           align-items: center;
+          height: 100%;
+          justify-content: flex-start;
+          text-align: center;
       }
       .movie-info span {
           margin-right: 20px;
