--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -67,10 +67,11 @@
           width: 100%;
       }
       .movie-info img {
-          margin-right: 10px;
-          max-width: 100px;
-          max-height: 150px;
-          height: 100%;
+          margin: auto;
+          max-width: 150px;
+          max-height: 200px;
+          height: auto;
+          display: block;
       }
       .shuffle-button {
           display: inline-block;
