--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -38,6 +38,7 @@
           transform: translateY(50%);
           padding: 0 10px;
           font-style: italic;
+          font-size: 18;
           color: #555;
       }
       a {
@@ -62,14 +63,14 @@
       }
       .movie-info span {
           margin-right: 20px;
-          font-size: 18px;
+          font-size: 24px;
           font-weight: bold;
           width: 100%;
       }
       .movie-info img {
           margin: auto;
-          max-width: 150px;
-          max-height: 200px;
+          max-width: 250px;
+          max-height: 300px;
           height: auto;
           display: block;
       }
