--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -7,7 +7,7 @@
   <style>
       body {
           font-family: Arial, sans-serif;
-          background-color: #E4D02B;
+          background-color: #DFD685;
           margin: 0;
           padding: 20px;
       }
