--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -10,6 +10,7 @@
           background-color: #DFD685;
           margin: 0;
           padding: 20px;
+          text-align: center;
       }
       h1 {
           color: #222222;
@@ -20,6 +21,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        margin-top: 20px;
       }
       li {
           background-color: rgb(226, 226, 226);
@@ -63,14 +65,14 @@
       }
       .movie-info span {
           margin-right: 20px;
-          font-size: 24px;
+          font-size: 25px;
           font-weight: bold;
           width: 100%;
       }
       .movie-info img {
           margin: auto;
-          max-width: 250px;
-          max-height: 300px;
+          max-width: 350px;
+          max-height: 400px;
           height: auto;
           display: block;
       }
