--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -100,6 +100,11 @@
           max-width: 100%;
           height: auto;
       }
+      .no-recommendations-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+      }
   </style>
 </head>
 <body>
@@ -119,10 +124,12 @@
        </ul>
        <button class="shuffle-button" onclick="shuffleMovies('{{ query }}')">Shuffle</button>
    {% else %}
-       <p class="no-recommendations">Oops there were no results for "{{ query }}". Please try again</p>
-       <img src="/static/images/NOOOO.jpeg" alt="No recommendations image">
+       <div class="no-recommendations-container">
+            <p class="no-recommendations">Oops there were no results for "{{ query }}". Please try again</p>
+            <img src="/static/images/NOOOO.jpeg" alt="No recommendations image">
+            <a href="/">Back to search</a>
+       </div>
    {% endif %}
-   <a href="/">Back to search</a>
 
    <script>
        function shuffleMovies(query) {
