--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,10 @@
        input[type="submit"]:hover {
            background-color: #0056b3;
        }
+       label[for="query"] {
+           margin-bottom: 10px;
+       }
+
    </style>
 </head>
 <body>
